src/objects/vlocity_ins__CustomObjectMap__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>vlocity_ins__DestinationChildObject__c</fullName>
        <label>Destination Child Object</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DestinationParentObject__c</fullName>
        <label>Destination Parent Object</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ParentDestinationReferenceField__c</fullName>
        <label>Parent Destination Reference Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ParentSourceReferenceField__c</fullName>
        <label>Parent Source Reference Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SourceChildObject__c</fullName>
        <label>Source Child Object</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SourceParentObject__c</fullName>
        <label>Source Parent Object</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Custom Object Map</label>
</CustomObject>